--- a/src/UI/List-Item/MovieItem/MovieItem.scss
+++ b/src/UI/List-Item/MovieItem/MovieItem.scss
@@ -4,16 +4,17 @@
   position: relative;
   color: white;
   &__title{
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     position: absolute;
     // top: 0;
     text-align: center;
     left: 0;
-    top: 0;
-    // bottom: 0;
+    // top: 0;
+    bottom: 0;
     z-index: 1000;
     background: rgba($color: #000000, $alpha: .6);
     width: 100%;
+    padding: .5rem;
     
   }
   &__img{
