--- a/src/layouts/General/containers/GeneralLayout.css
+++ b/src/layouts/General/containers/GeneralLayout.css
@@ -6,11 +6,13 @@
   color: white;
   overflow: hidden; }
   .general-wrapper .general-content {
-    flex: 1 0 auto; }
+    flex: 1 0 auto;
+    margin-top: 5rem; }
 
 .nav-fixed {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 2000; }
+  z-index: 2000;
+  margin-bottom: 20rem; }
