--- a/src/layouts/General/containers/GeneralLayout.scss
+++ b/src/layouts/General/containers/GeneralLayout.scss
@@ -9,6 +9,7 @@
   
   .general-content{ 
     flex: 1 0 auto;
+    margin-top: 5rem;
   }
 
 }
@@ -20,4 +21,5 @@
   width: 100%;
   // background: black;
   z-index: 2000;
+  margin-bottom: 20rem;
 }
